[package]
name = "general-sam"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A general suffix automaton implementation in Rust"
repository = "https://github.com/ModelTC/general-sam"
homepage = "https://github.com/ModelTC/general-sam"
documentation = "https://docs.rs/general-sam"
readme = "README.md"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]
exclude = ["release-plz.toml"]

[lib]
name = "general_sam"
bench = false

[features]
trie = []
utils = ["rand"]
all = ["trie", "utils"]

[dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
tokenizers = "0.15.2"

[[bench]]
name = "tokenize"
harness = false
required-features = ["all"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg --html-in-header ./docs-header.html" cargo +nightly doc --all-features --no-deps
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--html-in-header", "./docs-header.html"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
