[package]
name = "general-sam"
version = "1.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A general suffix automaton implementation in Rust"
repository = "https://github.com/ModelTC/general-sam"
homepage = "https://github.com/ModelTC/general-sam"
documentation = "https://docs.rs/general-sam"
readme = "README.md"
exclude = ["release-plz.toml", "rustfmt.toml", ".github"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg --html-in-header ./docs-header.html" cargo +nightly doc --all-features --no-deps
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--html-in-header", "./docs-header.html"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[lib]
name = "general_sam"
bench = false

[features]
trie = []
utils = ["rand"]
all = ["trie", "utils"]

[dependencies]
rand = { version = "0.10.2", optional = true }

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.2"
tokenizers = "0.23.1"

[[bench]]
name = "tokenize"
harness = false
required-features = ["all"]
