[package]
name = "general-sam-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "general_sam"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = [
  "extension-module",
  "abi3-py38",
  "generate-import-lib",
] }
general-sam = { path = ".." }
