[package]
name = "general-sam-py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for general-sam and some utilities"
repository = "https://github.com/ModelTC/general-sam"
homepage = "https://github.com/ModelTC/general-sam/tree/main/pybind"
readme = "README.md"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "general_sam"
crate-type = ["cdylib"]

[dependencies]
general-sam = { path = ".." }
pyo3 = { version = "0.20.0", features = [
  "extension-module",
  "abi3-py38",
  "generate-import-lib",
] }
either = "1.9.0"
